fix: Z-index conflict between modal and navbar

--- a/src/features/Nav/nav.module.styl
+++ b/src/features/Nav/nav.module.styl
@@ -28,7 +28,6 @@ $navbar($height, $font-size = 20px)
 // required to make dropdown menu work
 .navbar
   position relative
-  z-index $z-navbar
 
 .top
   $grid(, between)
