--- a/src/features/Products/products.module.styl
+++ b/src/features/Products/products.module.styl
@@ -83,9 +83,10 @@ $image-scale = 1.15
     width 50%
 
 .preview-container
-  position relative
+  position absolute
   height 100%
   width 100%
+  border 1px solid red
   .preview-content
     border 20px solid lightgray
     bottom 0
